include(CTest)
include(Catch)

add_executable(disruptor_waitstrategy_tests catch_main.cpp WaitStrategy_tests.cpp)
target_link_libraries(disruptor_waitstrategy_tests PRIVATE project_warnings project_options CONAN_PKG::catch2 disruptor core)
catch_discover_tests(disruptor_waitstrategy_tests)

add_executable(disruptor_tests catch_main.cpp WaitStrategy_tests.cpp RingBuffer_tests.cpp)
target_link_libraries(disruptor_tests PRIVATE project_warnings project_options CONAN_PKG::catch2 core disruptor)
catch_discover_tests(disruptor_tests)

add_executable(disruptor_benchmark_tests Disruptor_tests.cpp)
target_link_libraries(disruptor_benchmark_tests PRIVATE project_warnings project_options disruptor)
